--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-
-/* Nav Bar */
+/* -------------- Nav Bar -------------- */
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0; 
     color:#ffffff;
@@ -19,8 +18,6 @@ nav {
 }
 
 .navbar {
-    /*background: #ddbbac00;
-    position: fixed;*/
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     padding: 0;
@@ -36,14 +33,10 @@ nav {
     float:right;
 }
 
+
 .navbar li:last-child a::after {
     visibility:hidden;
 }
-
-
-
-
-
 /*end of navbar*/
 
 /* Setting the padding to zero for bootstrap container to be full width*/
@@ -51,14 +44,14 @@ nav {
     padding-right:0;
     padding-left:0;
 }
-/*SECTION ONE IMAGE*/
+/* -------------- SECTION ONE IMAGE -------------- */
 .topImg{
     width: 100%;
     z-index: 1;
     margin-top: -56px;
 }
 
-/*SECTION TWO About*/
+/* -------------- SECTION TWO About -------------- */
 #mealAbout {
     width: 90%;
     float: right;
@@ -72,14 +65,14 @@ nav {
     margin-left: 15%; 
 }
 
-/*SECTION THREE get brunch*/
+/* -------------- SECTION THREE get brunch -------------- */
 #mealBrunch {
     width: 70%;
     float: left;
     margin-top: 15%;
 }
 
-/*SECTION FOUR reservation*/
+/* -------------- SECTION FOUR reservation -------------- */
 #reservImg{
     margin-top: 15%;
     width:100%;
@@ -104,7 +97,7 @@ nav {
 }
 
 
-/*SECTION FIVE Events */
+/* -------------- SECTION FIVE Events -------------- */
 #eventImg {
     margin-top: 15%;
     margin-right: 10px;
@@ -113,7 +106,7 @@ nav {
 }
 
 
-/*SECTION SIX Get in Touch and footer*/
+/* -------------- SECTION SIX Get in Touch and footer -------------- */
 #mapFooter{
     width: 100%;
 }
@@ -126,60 +119,34 @@ nav {
 
 #footerImg{
     width:100%;
-    /*margin-top: -60px;*/
    position: absolute;
    z-index: 2;
    bottom: 0;
 }
 
 
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 670px) {
-
-} 
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 550px) {
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
     .centered {
-        font-size: 15px;
+        font-size: 50px;
         letter-spacing: 11px;
     }
+}
 
-} 
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 670px) {
-    .centered {
-        font-size: 20px;
-        letter-spacing: 11px;
-    }
-
-} 
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    .centered {
-    font-size: 36px;
-    letter-spacing: 11px;
-    }
-} 
-
-/* Large devices (laptops/desktops, 992px and up) */
+/* Large devices (laptops/desktops, 992px and down) */
 @media only screen and (max-width: 992px) {
-    .centered {
-        font-size: 40px;
-        letter-spacing: 11px;
-    }
 
+    /* -------------- nav dropdown for smaller screens -------------- */
     button.navbar-toggler.ml-auto{
        z-index: 3;
+       transform: translate(-10px, 10px);
     }
-      .navbar-collapse.ml-auto.collapsing {
+    .navbar-collapse.ml-auto.collapsing {
         background: #bf9a89 !important;
         text-align: center !important;
         border-bottom: 1px solid #000;
         margin-top: -40px;
+        z-index: 2;
     }
 
     .navbar-collapse.ml-auto.collapse.show {
@@ -196,22 +163,44 @@ nav {
     #navbarNav {
         margin-right: 0px;
         padding-top: 0px;
+
     }
-    /*
-    .navbar.navbar-expand-lg.navbar-light.bg-faded{
-        padding-right:-20px;
-    } */
-
-
-  
     
-    
-} 
+    .navbar-light .navbar-toggler {
+        background: #fff;
+    }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
     .centered {
-        font-size: 50px;
+        font-size: 35px;
         letter-spacing: 11px;
     }
-}
+
+
+} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    .centered {
+    font-size: 36px;
+    letter-spacing: 11px;
+    }
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 670px) {
+    .centered {
+        font-size: 20px;
+        letter-spacing: 11px;
+    }
+
+} 
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 550px) {
+    .centered {
+        font-size: 15px;
+        letter-spacing: 11px;
+    }
+
+} 
