--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,19 +117,53 @@ nav {
     z-index: 0;
 }
 
-#footerImg{
-    width:100%;
-   position: absolute;
-   z-index: 2;
-   bottom: 0;
+/* Footer Nav */
+#bottomNav{
+    z-index: 3;
+    position: absolute;
+    width: 100%;
+    margin-top: -80px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    transform: rotate(-1.6deg);
+    margin-left: 10px;
+    font-size: 25px;
+}
+#bottomNav a {
+    color: #dcbaab;
+    padding-left: 50px;   
+}
+#bottomNav a:hover {
+    color:#fff;   
 }
 
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
+#footerImg{
+    width:100%;
+    position: absolute;
+    z-index: 2; 
+    bottom: 0;
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and down) */
 @media only screen and (max-width: 1200px) {
     .centered {
         font-size: 50px;
         letter-spacing: 11px;
+    }
+
+
+
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 20px;
+    margin-top: -60px;
+    margin-left: 0;
+    }
+
+    #bottomNav a{
+        padding-left: 40px;
     }
 }
 
@@ -175,32 +209,102 @@ nav {
         letter-spacing: 11px;
     }
 
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 18px;
+    margin-top: -50px;
+    }
+
+    #bottomNav a{
+        padding-left: 30px;
+    }
+
 
 } 
 
-/* Medium devices (landscape tablets, 768px and up) */
+/* Medium devices (landscape tablets, 768px and down) */
 @media only screen and (max-width: 768px) {
     .centered {
     font-size: 36px;
     letter-spacing: 11px;
     }
+
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 16px;
+    margin-top: -45px;
+    }
+
+    #bottomNav a{
+        padding-left: 25px;
+    }
 } 
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
+/* Small devices (portrait tablets and large phones, 600px and down) */
 @media only screen and (max-width: 670px) {
     .centered {
         font-size: 20px;
         letter-spacing: 11px;
     }
 
+
+        /* Footer Nav */
+    #bottomNav {
+    font-size: 14px;
+    margin-top: -40px;
+    }
+
+    #bottomNav a{
+        padding-left: 18px;
+    }
+
 } 
 
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 550px) {
+/* Small devices (portrait tablets and large phones, 600px and down) */
+@media only screen and (max-width: 556px) {
     .centered {
         font-size: 15px;
         letter-spacing: 11px;
     }
 
+
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: -30px;
+    }
+
+    #bottomNav a{
+        padding-left: 10px;
+    }
+
 } 
+/* smartphones, iPhone, portrait 480x320 phones */
+@media (max-width:481px) {
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 10px;
+    font-weight: 300;
+    margin-top: -25px;
+    }
+
+    #bottomNav a{
+        padding-left: 8px;
+    }
+}
+
+@media (max-width:320px) { 
+        /* Footer Nav */
+    #bottomNav {
+    font-size: 8px;
+    font-weight: 200;
+    margin-top: -20px;
+    }
+
+    #bottomNav a{
+        padding-left: 5px;
+    }
+
+ }
