--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,14 @@
 }
 
 nav {
-    z-index: 10;
+    z-index: 5;
     /*display: inline-block;*/
 }
 
 .navbar {
     font-family: 'Roboto', sans-serif;
-    font-weight: 900;
+    letter-spacing: 2px;
+    font-size:14px;
     padding: 0;
 }
 #navbarNav {
@@ -27,16 +28,28 @@ nav {
     padding-top: 15px;
 }
 
+
+/* .nav-link::after {
+    content:"/";
+    margin-left:10px;
+    float:right;
+}
+
+.nav-link:last-child::after {
+    visibility:hidden;
+}
+ */
+
+
 .navbar li a::after {
     content:"/";
     margin-left:10px;
     float:right;
 }
 
-
 .navbar li:last-child a::after {
     visibility:hidden;
-}
+} 
 /*end of navbar*/
 
 /* Setting the padding to zero for bootstrap container to be full width*/
@@ -64,7 +77,7 @@ nav {
     /* transform: translate(-50%, -50%); */
     z-index: 3;
 }
-
+/*Section one Just Brunch*/
 h1 {
     position: absolute;
     font-size: 137pt;
@@ -73,7 +86,7 @@ h1 {
 }
 h6 {
     position: absolute;
-    font-size: 44px;
+    font-size: 33pt;
     letter-spacing: 5px;
     transform: translate(32%, 120%);
 }
@@ -177,6 +190,18 @@ h6 {
 
 /* Extra large devices (large laptops and desktops, 1200px and down) */
 @media only screen and (max-width: 1200px) {
+     /*Section one Just Brunch*/
+    h1 {
+        font-size: 110pt;
+        letter-spacing: 10px;
+    }
+
+    h6 {
+        font-size: 26pt;
+        letter-spacing: 5px;
+    }
+    
+    /*Section four Reservations*/
     .centered {
         font-size: 50px;
         letter-spacing: 11px;
@@ -186,9 +211,9 @@ h6 {
 
     /* Footer Nav */
     #bottomNav {
-    font-size: 20px;
-    margin-top: -60px;
-    margin-left: 0;
+        font-size: 20px;
+        margin-top: -60px;
+        margin-left: 0;
     }
 
     #bottomNav a{
@@ -219,9 +244,9 @@ h6 {
         margin-top: -40px;
         z-index: 2;
     }
-    .navbar li a::after {
+     .navbar li a::after {
         content: none;
-    }
+    } 
 
     #navbarNav {
         margin-right: 0px;
@@ -233,11 +258,28 @@ h6 {
         background: #fff;
     }
 
-    .navbar-fixed-top.scrolled {
-  background-color: #fff !important;
-  transition: background-color 200ms linear;
-}
+    .fixed-top {
+        position: absolute;
+    }
 
+    .fixed-top.scrolled {
+        margin-right: 0;
+        background-color: #fff !important;
+        transition: background-color 200ms linear;
+    }
+
+     /*Section one Just Brunch*/
+    h1 {
+        font-size: 62pt;
+        letter-spacing: 10px;
+    }
+
+    h6 {
+        font-size: 15pt;
+        letter-spacing: 5px;
+    }
+
+ /*Section four Reservations*/
     .centered {
         font-size: 35px;
         letter-spacing: 11px;
@@ -245,12 +287,12 @@ h6 {
 
     /* Footer Nav */
     #bottomNav {
-    font-size: 18px;
+    font-size: 16px;
     margin-top: -50px;
     }
 
     #bottomNav a{
-        padding-left: 30px;
+        padding-left: 25px;
     }
 
 
@@ -258,6 +300,8 @@ h6 {
 
 /* Medium devices (landscape tablets, 768px and down) */
 @media only screen and (max-width: 768px) {
+
+     /*Section four Reservations*/
     .centered {
     font-size: 36px;
     letter-spacing: 11px;
@@ -265,17 +309,31 @@ h6 {
 
     /* Footer Nav */
     #bottomNav {
-    font-size: 16px;
-    margin-top: -45px;
+        font-size: 15px;
+        margin-top: -45px;
     }
 
     #bottomNav a{
-        padding-left: 25px;
+        padding-left: 20px;
     }
 } 
 
 /* Small devices (portrait tablets and large phones, 600px and down) */
 @media only screen and (max-width: 670px) {
+
+
+    /*Section one Just Brunch*/
+    h1 {
+        font-size: 50pt;
+        letter-spacing: 10px;
+    }
+
+    h6 {
+        font-size: 12pt;
+        letter-spacing: 5px;
+    }
+
+     /*Section four Reservations*/
     .centered {
         font-size: 20px;
         letter-spacing: 11px;
@@ -284,12 +342,12 @@ h6 {
 
         /* Footer Nav */
     #bottomNav {
-    font-size: 14px;
-    margin-top: -40px;
+        font-size: 12px;
+        margin-top: -40px;
     }
 
     #bottomNav a{
-        padding-left: 18px;
+        padding-left: 10px;
     }
 
 } 
@@ -297,13 +355,24 @@ h6 {
 
 /* Small devices (portrait tablets and large phones, 600px and down) */
 @media only screen and (max-width: 556px) {
-
+    /*Smaller navbar toggle at smaller screen*/
     .navbar-toggler-icon {
         width: 1em;
         height: 1em;
     }
 
+    /*Section one Just Brunch*/
+    h1 {
+        font-size: 40pt;
+        letter-spacing: 10px;
+    }
 
+    h6 {
+        font-size: 11pt;
+        letter-spacing: 2px;
+    }
+
+ /*Section four Reservations*/
     .centered {
         font-size: 15px;
         letter-spacing: 11px;
@@ -313,7 +382,7 @@ h6 {
     /* Footer Nav */
     #bottomNav {
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 200;
     margin-top: -30px;
     }
 
@@ -324,6 +393,17 @@ h6 {
 } 
 /* smartphones, iPhone, portrait 480x320 phones */
 @media (max-width:481px) {
+
+    /*Section one Just Brunch*/
+    h1 {
+        font-size: 27pt;
+        letter-spacing: 10px;
+    }
+
+    h6 {
+        font-size: 8pt;
+        letter-spacing: 2px;
+    }
     /* Footer Nav */
     #bottomNav {
     font-size: 10px;
@@ -336,10 +416,47 @@ h6 {
     }
 }
 
-@media (max-width:320px) { 
+/*media query for footer nav to make it fit better*/
+@media (max-width:370px){
 
+    /*Section one Just Brunch*/
+    h1 {
+        font-size: 24pt;
+        letter-spacing: 5px;
+    }
+
+    h6 {
+        font-size: 9pt;
+        letter-spacing: 1px;
+    }
+
+    /* Footer Nav */
+    #bottomNav {
+    font-size: 9px;
+    font-weight: 300;
+    margin-top: -20px;
+    }
+
+    #bottomNav a{
+        padding-left: 7px;
+    }
+}
+
+@media (max-width:330px) { 
+    /*change nav toggle menu placement on large screens*/
     button.navbar-toggler.ml-auto {
         transform: translate(-2px, 2px);
+    }
+
+    /*Section one Just Brunch*/
+    h1 {
+        font-size: 22pt;
+        letter-spacing: 5px;
+    }
+
+    h6 {
+        font-size: 8pt;
+        letter-spacing: 1px;
     }
 
         /* Footer Nav */
@@ -350,7 +467,7 @@ h6 {
     }
 
     #bottomNav a{
-        padding-left: 5px;
+        padding-left: 4px;
     }
 
  }
