--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,15 +101,20 @@ nav {
 }
 
 #graySqu {
-    width: 88%;
-    /* margin-top: 68px;
-    margin-left: 50px; */
+    /*width: 88%;
+     margin-top: 68px;
+    margin-left: 50px; 
     margin-top: 20%;
-    margin-left: 15%; 
+    margin-left: 15%; */
+    background: #ebebeb;
+    height: 464px;
+    width: 88%;
+    margin-top: 19%;
+    margin-left: 15%;
 }
 
 /*Text*/
-/*============== Style OKAY AT 1075px Needs to be responsive*/
+/*============== Style OKAY AT 1075px Needs to be responsive
 #aboutContent{
     width: 100%;
     margin-left: auto;
@@ -117,7 +122,6 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;  
-    /* transform: translate(-50%, -50%); */
     z-index: 3;
 }
 #aboutContent h1 {
@@ -138,7 +142,23 @@ nav {
     letter-spacing: 10px;
     transform: translate(-99%, 220%);
 }
+*/
 
+#aboutContent h1 {
+    overflow-x: visible;
+    width: 641px;
+    font-size: 88pt;
+    padding-left: 15px;
+    font-family: 'Roboto', sans-serif;
+    color: #c48a80;
+    letter-spacing: 10px;
+}
+#aboutContent p{
+    font-size: 14pt;
+    font-family: 'IBM Plex Mono', monospace;
+    color: black;
+    padding:15px;
+}
 
 /* -------------- SECTION THREE get brunch -------------- */
 #mealBrunch {
