I took out the text for the top in order to fix the scrolling error. I need to fix the top text.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,15 @@ nav {
     padding-top: 15px;
 }
 
+/* .container-fluid{
+    margin-left: 0;
+    margin-right: 0;
+}*/
+
+.row{
+    margin-right: 0;
+    margin-left: 0;
+} 
 
 /* .nav-link::after {
     content:"/";
